k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vecstore
  labels:
    name: vecstore
    app: vecstore
